[metadata]
name = csv-extractor-cli
version = 0.0.1
author = Simon Overell
author_email = simon@human.ai
description = Segment CSVs by rows and extract by column.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
url = https://github.com/humanai-repo/csv-extractor-cli
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
	csv_extractor = csv_extractor.csv_extractor:main